[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/templates/ui/T_btn_var_edit.gd" type="Script" id=1]




[node name="btn_var_edit" type="Button"]
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 32 )
toggle_mode = true
text = "b = 1"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="eqn_edit" type="LineEdit" parent="."]
anchor_left = 0.312
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.8147e-06
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
placeholder_text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="eqn_left" type="Label" parent="."]
visible = false
anchor_right = 0.312
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "b = "
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="text_entered" from="eqn_edit" to="." method="_on_eqn_edit_text_entered"]
